Refactor syntax highlighting to use CSS variables
Replaced hardcoded syntax colors for Dream language highlighting with CSS variables in index-base.css. Added corresponding --syntax-string, --syntax-function, and --syntax-number variables to both index.css and index-dark.css for light and dark themes. This improves maintainability and makes theme customization easier.

--- a/src/index-base.css
+++ b/src/index-base.css
@@ -900,7 +900,7 @@ eam Language Syntax Highlighting */
 }
 
 .main-content code[class*="language-dream"] .token.string {
-    color: #22863a;
+    color: var(--syntax-string);
 }
 
 .main-content code[class*="language-dream"] .token.comment {
@@ -909,25 +909,14 @@ eam Language Syntax Highlighting */
 }
 
 .main-content code[class*="language-dream"] .token.function {
-    color: #6f42c1;
+    color: var(--syntax-function);
 }
 
 .main-content code[class*="language-dream"] .token.number {
-    color: #005cc5;
+    color: var(--syntax-number);
 }
 
-/* Dark theme syntax highlighting */
-:root[data-theme="dark"] .main-content code[class*="language-dream"] .token.string {
-    color: #9ecbff;
-}
 
-:root[data-theme="dark"] .main-content code[class*="language-dream"] .token.function {
-    color: #b392f0;
-}
-
-:root[data-theme="dark"] .main-content code[class*="language-dream"] .token.number {
-    color: #79b8ff;
-}
 
 /* Improve search results positioning */
 .search-results {
